--- a/python_datasc/delete_row.ipynb
+++ b/python_datasc/delete_row.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "22ffafd6",
+   "id": "ed27be24",
    "metadata": {},
    "source": [
     "# Nettoyage des valeurs non significatives"
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "810ffcf7",
+   "id": "49286805",
    "metadata": {},
    "source": [
     "###  Détection des lignes dupliquées avec pandas"
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "687d3c0b",
+   "id": "68aa0948",
    "metadata": {},
    "source": [
     "### Génération d'une regression"
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 171,
    "id": "f73010e1",
    "metadata": {},
    "outputs": [],
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 172,
    "id": "7d433b79",
    "metadata": {},
    "outputs": [],
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 168,
    "id": "1d8624ba",
    "metadata": {},
    "outputs": [],
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 173,
    "id": "59d07074",
    "metadata": {},
    "outputs": [],
@@ -445,7 +445,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2bc2c92d",
+   "id": "fd8dedd9",
    "metadata": {},
    "source": [
     "### Utilisation de la méthode nunique de pandas pour compter les valeurs differentes"
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 176,
    "id": "1bdcf5ec",
    "metadata": {},
    "outputs": [
@@ -483,7 +483,6 @@
        "      <th>x3</th>\n",
        "      <th>x4</th>\n",
        "      <th>x5</th>\n",
-       "      <th>y</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -494,7 +493,6 @@
        "      <td>-0.544383</td>\n",
        "      <td>0.375698</td>\n",
        "      <td>0.2</td>\n",
-       "      <td>-48.230418</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -503,7 +501,6 @@
        "      <td>-1.012831</td>\n",
        "      <td>-1.412304</td>\n",
        "      <td>0.2</td>\n",
-       "      <td>-81.341009</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -512,7 +509,6 @@
        "      <td>-0.676922</td>\n",
        "      <td>0.931280</td>\n",
        "      <td>0.2</td>\n",
-       "      <td>-50.577102</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -521,7 +517,6 @@
        "      <td>0.087047</td>\n",
        "      <td>-1.987569</td>\n",
        "      <td>0.2</td>\n",
-       "      <td>-0.815857</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -530,183 +525,32 @@
        "      <td>-0.469474</td>\n",
        "      <td>-0.465730</td>\n",
        "      <td>0.2</td>\n",
-       "      <td>-31.507802</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>-0.234137</td>\n",
-       "      <td>1.579213</td>\n",
-       "      <td>-0.234153</td>\n",
-       "      <td>0.767435</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>-28.642638</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>1.356240</td>\n",
-       "      <td>-0.072010</td>\n",
-       "      <td>0.812526</td>\n",
-       "      <td>1.003533</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>107.567470</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>-1.763040</td>\n",
-       "      <td>0.324084</td>\n",
-       "      <td>0.343618</td>\n",
-       "      <td>-0.385082</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>-13.941902</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>-0.645120</td>\n",
-       "      <td>0.361396</td>\n",
-       "      <td>0.361636</td>\n",
-       "      <td>1.538037</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>16.034778</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>-0.185659</td>\n",
-       "      <td>-1.106335</td>\n",
-       "      <td>-0.479174</td>\n",
-       "      <td>-1.196207</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>-47.333416</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>-0.138264</td>\n",
-       "      <td>0.647689</td>\n",
-       "      <td>0.496714</td>\n",
-       "      <td>1.523030</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>46.066972</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>-1.913280</td>\n",
-       "      <td>-1.724918</td>\n",
-       "      <td>0.241962</td>\n",
-       "      <td>-0.562288</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>-27.242176</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>-1.057711</td>\n",
-       "      <td>0.822545</td>\n",
-       "      <td>-0.013497</td>\n",
-       "      <td>-1.220844</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>-27.301642</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>-0.291694</td>\n",
-       "      <td>-0.601707</td>\n",
-       "      <td>-0.600639</td>\n",
-       "      <td>1.852278</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>-60.243850</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>-0.225776</td>\n",
-       "      <td>0.067528</td>\n",
-       "      <td>1.465649</td>\n",
-       "      <td>-1.424748</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>128.375194</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>0.171368</td>\n",
-       "      <td>-0.115648</td>\n",
-       "      <td>0.738467</td>\n",
-       "      <td>-0.301104</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>69.186670</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>-0.309212</td>\n",
-       "      <td>0.331263</td>\n",
-       "      <td>-0.839218</td>\n",
-       "      <td>0.975545</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>-82.984632</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>-0.719844</td>\n",
-       "      <td>-0.460639</td>\n",
-       "      <td>-1.478522</td>\n",
-       "      <td>1.057122</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>-153.113842</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>-1.959670</td>\n",
-       "      <td>-1.328186</td>\n",
-       "      <td>0.208864</td>\n",
-       "      <td>0.196861</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>-26.991359</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>1.564644</td>\n",
-       "      <td>-2.619745</td>\n",
-       "      <td>-0.035826</td>\n",
-       "      <td>0.821903</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>31.507787</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "          x1        x2        x3        x4   x5           y\n",
-       "0   0.110923 -1.150994 -0.544383  0.375698  0.2  -48.230418\n",
-       "1   0.314247 -0.908024 -1.012831 -1.412304  0.2  -81.341009\n",
-       "2   0.611676  1.031000 -0.676922  0.931280  0.2  -50.577102\n",
-       "3  -0.299007  0.091761  0.087047 -1.987569  0.2   -0.815857\n",
-       "4   0.542560 -0.463418 -0.469474 -0.465730  0.2  -31.507802\n",
-       "5  -0.234137  1.579213 -0.234153  0.767435  0.2  -28.642638\n",
-       "6   1.356240 -0.072010  0.812526  1.003533  0.2  107.567470\n",
-       "7  -1.763040  0.324084  0.343618 -0.385082  0.2  -13.941902\n",
-       "8  -0.645120  0.361396  0.361636  1.538037  0.2   16.034778\n",
-       "9  -0.185659 -1.106335 -0.479174 -1.196207  0.2  -47.333416\n",
-       "10 -0.138264  0.647689  0.496714  1.523030  0.2   46.066972\n",
-       "11 -1.913280 -1.724918  0.241962 -0.562288  0.2  -27.242176\n",
-       "12 -1.057711  0.822545 -0.013497 -1.220844  0.2  -27.301642\n",
-       "13 -0.291694 -0.601707 -0.600639  1.852278  0.2  -60.243850\n",
-       "14 -0.225776  0.067528  1.465649 -1.424748  0.2  128.375194\n",
-       "15  0.171368 -0.115648  0.738467 -0.301104  0.2   69.186670\n",
-       "16 -0.309212  0.331263 -0.839218  0.975545  0.2  -82.984632\n",
-       "17 -0.719844 -0.460639 -1.478522  1.057122  0.2 -153.113842\n",
-       "18 -1.959670 -1.328186  0.208864  0.196861  0.2  -26.991359\n",
-       "19  1.564644 -2.619745 -0.035826  0.821903  0.2   31.507787"
+       "         x1        x2        x3        x4   x5\n",
+       "0  0.110923 -1.150994 -0.544383  0.375698  0.2\n",
+       "1  0.314247 -0.908024 -1.012831 -1.412304  0.2\n",
+       "2  0.611676  1.031000 -0.676922  0.931280  0.2\n",
+       "3 -0.299007  0.091761  0.087047 -1.987569  0.2\n",
+       "4  0.542560 -0.463418 -0.469474 -0.465730  0.2"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 176,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data"
+    "data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 177,
    "id": "06044ecc",
    "metadata": {},
    "outputs": [
@@ -718,11 +562,10 @@
        "x3    20\n",
        "x4    20\n",
        "x5     1\n",
-       "y     20\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 177,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -769,7 +612,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3704ab23",
+   "id": "3ad69e06",
    "metadata": {},
    "source": [
     "### Utilisation de sklearn pour supprimer des colonnes à faible variance "
@@ -777,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 174,
    "id": "2ec208a0",
    "metadata": {},
    "outputs": [
@@ -785,23 +628,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(20, 4)\n"
+      "format avant: (20, 5)\n",
+      "format avant: (20, 4)\n"
      ]
     }
    ],
    "source": [
     "from sklearn.feature_selection import VarianceThreshold\n",
     "from sklearn import set_config\n",
-    "# nouveau dans sklearn sorite vers Pandas\n",
+    "# nouveau dans sklearn sortie vers Pandas\n",
     "#set_config(transform_output = \"pandas\")\n",
+    "print('format avant:', data.shape)\n",
     "variance = VarianceThreshold().set_output(transform= 'pandas')\n",
     "dt2 = variance.fit_transform(data.iloc[:,:4])\n",
-    "print(dt2.shape)"
+    "print('format avant:',dt2.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 163,
    "id": "b9fdee63",
    "metadata": {},
    "outputs": [
@@ -1001,7 +846,7 @@
        "19  1.564644 -2.619745 -0.035826  0.821903"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 163,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1011,8 +856,91 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 164,
+   "id": "cc8c9c94",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>x1</th>\n",
+       "      <th>x2</th>\n",
+       "      <th>x3</th>\n",
+       "      <th>x4</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>x1</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.069383</td>\n",
+       "      <td>-0.061018</td>\n",
+       "      <td>0.187568</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>x2</th>\n",
+       "      <td>-0.069383</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.109416</td>\n",
+       "      <td>0.113099</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>x3</th>\n",
+       "      <td>-0.061018</td>\n",
+       "      <td>0.109416</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.177433</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>x4</th>\n",
+       "      <td>0.187568</td>\n",
+       "      <td>0.113099</td>\n",
+       "      <td>-0.177433</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          x1        x2        x3        x4\n",
+       "x1  1.000000 -0.069383 -0.061018  0.187568\n",
+       "x2 -0.069383  1.000000  0.109416  0.113099\n",
+       "x3 -0.061018  0.109416  1.000000 -0.177433\n",
+       "x4  0.187568  0.113099 -0.177433  1.000000"
+      ]
+     },
+     "execution_count": 164,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dt2.corr()"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "55549f81",
+   "id": "f801c108",
    "metadata": {},
    "source": [
     "##  Connaitre la version de sklearn"
@@ -1039,7 +967,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c31c54cd",
+   "id": "6027cca5",
    "metadata": {},
    "source": [
     "## Creation d'une regression avec une forte dispersion \n"
@@ -1048,7 +976,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "8cc10828",
+   "id": "f6281479",
    "metadata": {},
    "outputs": [
     {
@@ -1079,7 +1007,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "7005cb74",
+   "id": "4c6ff7cb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1089,7 +1017,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "0d5adfd6",
+   "id": "28c5f56f",
    "metadata": {},
    "outputs": [
     {
@@ -1122,7 +1050,7 @@
   {
    "cell_type": "code",
    "execution_count": 156,
-   "id": "c89d73df",
+   "id": "4cc27163",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1134,7 +1062,7 @@
   {
    "cell_type": "code",
    "execution_count": 157,
-   "id": "9ddd4e6d",
+   "id": "5ee3e50c",
    "metadata": {},
    "outputs": [
     {
@@ -1157,7 +1085,7 @@
   {
    "cell_type": "code",
    "execution_count": 158,
-   "id": "b9cbf810",
+   "id": "052d3025",
    "metadata": {},
    "outputs": [
     {
@@ -1181,7 +1109,7 @@
   {
    "cell_type": "code",
    "execution_count": 159,
-   "id": "7d8e9626",
+   "id": "f51e1713",
    "metadata": {},
    "outputs": [
     {
@@ -1208,7 +1136,7 @@
   {
    "cell_type": "code",
    "execution_count": 160,
-   "id": "c65652eb",
+   "id": "b63e9269",
    "metadata": {},
    "outputs": [
     {
@@ -1242,7 +1170,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "c8d53bb2",
+   "id": "9ec7dded",
    "metadata": {},
    "outputs": [
     {
@@ -1268,7 +1196,7 @@
   {
    "cell_type": "code",
    "execution_count": 119,
-   "id": "39b29cf8",
+   "id": "4c314751",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1278,7 +1206,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "7b6746a7",
+   "id": "1feaba1b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1289,7 +1217,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "fe33c87b",
+   "id": "f252f37a",
    "metadata": {},
    "outputs": [
     {
@@ -1350,7 +1278,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "ded9eeb7",
+   "id": "9843a9b5",
    "metadata": {},
    "outputs": [
     {
@@ -1401,7 +1329,7 @@
   {
    "cell_type": "code",
    "execution_count": 129,
-   "id": "0ea9282b",
+   "id": "d1fa9c4f",
    "metadata": {},
    "outputs": [
     {
@@ -1422,7 +1350,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "07d0c00b",
+   "id": "f0772589",
    "metadata": {},
    "outputs": [
     {
@@ -1443,7 +1371,7 @@
   {
    "cell_type": "code",
    "execution_count": 132,
-   "id": "e8466e8b",
+   "id": "52e7c210",
    "metadata": {},
    "outputs": [
     {
@@ -1462,7 +1390,7 @@
   {
    "cell_type": "code",
    "execution_count": 143,
-   "id": "6a271a40",
+   "id": "4ca3e9f2",
    "metadata": {},
    "outputs": [
     {
@@ -1483,7 +1411,7 @@
   {
    "cell_type": "code",
    "execution_count": 144,
-   "id": "4661907b",
+   "id": "1676d470",
    "metadata": {},
    "outputs": [
     {
@@ -1502,7 +1430,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "719c7657",
+   "id": "7b320f57",
    "metadata": {},
    "outputs": [],
    "source": []
