Update feuille de route blog.ipynb

--- a/blog/feuille de route blog.ipynb
+++ b/blog/feuille de route blog.ipynb
@@ -159,7 +159,9 @@
     "system design de l'état\n",
     "https://docs.scipy.org/doc/scipy-0.14.0/reference/generated/scipy.signal.lfilter.html#scipy.signal.lfilter\n",
     "\n",
-    "https://stackoverflow.com/questions/37598986/reducing-noise-on-data"
+    "https://stackoverflow.com/questions/37598986/reducing-noise-on-data\n",
+    "\n",
+    "recommendation https://www.kaggle.com/code/ibtesama/getting-started-with-a-movie-recommendation-system#Collaborative-Filtering"
    ]
   },
   {
