--- a/blog/feuille de route blog.ipynb
+++ b/blog/feuille de route blog.ipynb
@@ -161,7 +161,9 @@
     "\n",
     "https://stackoverflow.com/questions/37598986/reducing-noise-on-data\n",
     "\n",
-    "recommendation https://www.kaggle.com/code/ibtesama/getting-started-with-a-movie-recommendation-system#Collaborative-Filtering"
+    "recommendation https://www.kaggle.com/code/ibtesama/getting-started-with-a-movie-recommendation-system#Collaborative-Filtering\n",
+    "\n",
+    "https://towardsdatascience.com/dealing-with-list-values-in-pandas-dataframes-a177e534f173"
    ]
   },
   {
