--- a/blog/foot1.ipynb
+++ b/blog/foot1.ipynb
@@ -89,46 +89,421 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "007e35e6",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<>:1: SyntaxWarning: str indices must be integers or slices, not str; perhaps you missed a comma?\n",
-      "<>:1: SyntaxWarning: str indices must be integers or slices, not str; perhaps you missed a comma?\n",
-      "C:\\Users\\33681\\AppData\\Local\\Temp\\ipykernel_9488\\2974164765.py:1: SyntaxWarning: str indices must be integers or slices, not str; perhaps you missed a comma?\n",
-      "  dt.loc[:,[ 'home_team'['home_team-id'], 'away_team']]\n",
-      "C:\\Users\\33681\\AppData\\Local\\Temp\\ipykernel_9488\\2974164765.py:1: SyntaxWarning: str indices must be integers or slices, not str; perhaps you missed a comma?\n",
-      "  dt.loc[:,[ 'home_team'['home_team-id'], 'away_team']]\n",
-      "C:\\Users\\33681\\AppData\\Local\\Temp\\ipykernel_9488\\2974164765.py:1: SyntaxWarning: str indices must be integers or slices, not str; perhaps you missed a comma?\n",
-      "  dt.loc[:,[ 'home_team'['home_team-id'], 'away_team']]\n",
-      "C:\\Users\\33681\\AppData\\Local\\Temp\\ipykernel_9488\\2974164765.py:1: SyntaxWarning: str indices must be integers or slices, not str; perhaps you missed a comma?\n",
-      "  dt.loc[:,[ 'home_team'['home_team-id'], 'away_team']]\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "string indices must be integers",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [20]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[0m dt\u001b[38;5;241m.\u001b[39mloc[:,[ \u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mhome_team\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mhome_team-id\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124maway_team\u001b[39m\u001b[38;5;124m'\u001b[39m]]\n",
-      "\u001b[1;31mTypeError\u001b[0m: string indices must be integers"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>home_team</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>{'home_team_id': 852, 'home_team_name': 'Norwa...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>{'home_team_id': 1205, 'home_team_name': 'Aust...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>{'home_team_id': 1212, 'home_team_name': 'Jama...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>{'home_team_id': 1212, 'home_team_name': 'Jama...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>{'home_team_id': 1204, 'home_team_name': 'Arge...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>{'home_team_id': 1214, 'home_team_name': 'Unit...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>{'home_team_id': 1209, 'home_team_name': 'Chil...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>{'home_team_id': 1213, 'home_team_name': 'Nige...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>{'home_team_id': 857, 'home_team_name': 'Germa...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>{'home_team_id': 1216, 'home_team_name': 'Sout...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>{'home_team_id': 1210, 'home_team_name': 'Japa...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>{'home_team_id': 851, 'home_team_name': 'Nethe...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>{'home_team_id': 1206, 'home_team_name': 'Cana...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>{'home_team_id': 851, 'home_team_name': 'Nethe...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>{'home_team_id': 858, 'home_team_name': 'Swede...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>{'home_team_id': 858, 'home_team_name': 'Swede...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>{'home_team_id': 1208, 'home_team_name': 'Came...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>{'home_team_id': 857, 'home_team_name': 'Germa...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>{'home_team_id': 865, 'home_team_name': 'Engla...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>{'home_team_id': 861, 'home_team_name': 'Franc...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>{'home_team_id': 857, 'home_team_name': 'Germa...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>{'home_team_id': 865, 'home_team_name': 'Engla...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>{'home_team_id': 858, 'home_team_name': 'Swede...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>{'home_team_id': 1210, 'home_team_name': 'Japa...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>{'home_team_id': 1211, 'home_team_name': 'Kore...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>{'home_team_id': 1214, 'home_team_name': 'Unit...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>{'home_team_id': 852, 'home_team_name': 'Norwa...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>{'home_team_id': 1214, 'home_team_name': 'Unit...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>{'home_team_id': 1207, 'home_team_name': 'Chin...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>{'home_team_id': 855, 'home_team_name': 'Italy...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>{'home_team_id': 861, 'home_team_name': 'Franc...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>{'home_team_id': 857, 'home_team_name': 'Germa...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>{'home_team_id': 863, 'home_team_name': 'Spain...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>{'home_team_id': 1203, 'home_team_name': 'Braz...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>{'home_team_id': 1206, 'home_team_name': 'Cana...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35</th>\n",
+       "      <td>{'home_team_id': 861, 'home_team_name': 'Franc...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36</th>\n",
+       "      <td>{'home_team_id': 1215, 'home_team_name': 'New ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37</th>\n",
+       "      <td>{'home_team_id': 861, 'home_team_name': 'Franc...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38</th>\n",
+       "      <td>{'home_team_id': 1205, 'home_team_name': 'Aust...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>{'home_team_id': 865, 'home_team_name': 'Engla...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40</th>\n",
+       "      <td>{'home_team_id': 1213, 'home_team_name': 'Nige...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41</th>\n",
+       "      <td>{'home_team_id': 1216, 'home_team_name': 'Sout...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42</th>\n",
+       "      <td>{'home_team_id': 866, 'home_team_name': 'Scotl...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43</th>\n",
+       "      <td>{'home_team_id': 1107, 'home_team_name': 'Thai...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44</th>\n",
+       "      <td>{'home_team_id': 865, 'home_team_name': 'Engla...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45</th>\n",
+       "      <td>{'home_team_id': 855, 'home_team_name': 'Italy...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46</th>\n",
+       "      <td>{'home_team_id': 851, 'home_team_name': 'Nethe...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>47</th>\n",
+       "      <td>{'home_team_id': 852, 'home_team_name': 'Norwa...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48</th>\n",
+       "      <td>{'home_team_id': 865, 'home_team_name': 'Engla...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49</th>\n",
+       "      <td>{'home_team_id': 851, 'home_team_name': 'Nethe...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50</th>\n",
+       "      <td>{'home_team_id': 855, 'home_team_name': 'Italy...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>51</th>\n",
+       "      <td>{'home_team_id': 863, 'home_team_name': 'Spain...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                            home_team\n",
+       "0   {'home_team_id': 852, 'home_team_name': 'Norwa...\n",
+       "1   {'home_team_id': 1205, 'home_team_name': 'Aust...\n",
+       "2   {'home_team_id': 1212, 'home_team_name': 'Jama...\n",
+       "3   {'home_team_id': 1212, 'home_team_name': 'Jama...\n",
+       "4   {'home_team_id': 1204, 'home_team_name': 'Arge...\n",
+       "5   {'home_team_id': 1214, 'home_team_name': 'Unit...\n",
+       "6   {'home_team_id': 1209, 'home_team_name': 'Chil...\n",
+       "7   {'home_team_id': 1213, 'home_team_name': 'Nige...\n",
+       "8   {'home_team_id': 857, 'home_team_name': 'Germa...\n",
+       "9   {'home_team_id': 1216, 'home_team_name': 'Sout...\n",
+       "10  {'home_team_id': 1210, 'home_team_name': 'Japa...\n",
+       "11  {'home_team_id': 851, 'home_team_name': 'Nethe...\n",
+       "12  {'home_team_id': 1206, 'home_team_name': 'Cana...\n",
+       "13  {'home_team_id': 851, 'home_team_name': 'Nethe...\n",
+       "14  {'home_team_id': 858, 'home_team_name': 'Swede...\n",
+       "15  {'home_team_id': 858, 'home_team_name': 'Swede...\n",
+       "16  {'home_team_id': 1208, 'home_team_name': 'Came...\n",
+       "17  {'home_team_id': 857, 'home_team_name': 'Germa...\n",
+       "18  {'home_team_id': 865, 'home_team_name': 'Engla...\n",
+       "19  {'home_team_id': 861, 'home_team_name': 'Franc...\n",
+       "20  {'home_team_id': 857, 'home_team_name': 'Germa...\n",
+       "21  {'home_team_id': 865, 'home_team_name': 'Engla...\n",
+       "22  {'home_team_id': 858, 'home_team_name': 'Swede...\n",
+       "23  {'home_team_id': 1210, 'home_team_name': 'Japa...\n",
+       "24  {'home_team_id': 1211, 'home_team_name': 'Kore...\n",
+       "25  {'home_team_id': 1214, 'home_team_name': 'Unit...\n",
+       "26  {'home_team_id': 852, 'home_team_name': 'Norwa...\n",
+       "27  {'home_team_id': 1214, 'home_team_name': 'Unit...\n",
+       "28  {'home_team_id': 1207, 'home_team_name': 'Chin...\n",
+       "29  {'home_team_id': 855, 'home_team_name': 'Italy...\n",
+       "30  {'home_team_id': 861, 'home_team_name': 'Franc...\n",
+       "31  {'home_team_id': 857, 'home_team_name': 'Germa...\n",
+       "32  {'home_team_id': 863, 'home_team_name': 'Spain...\n",
+       "33  {'home_team_id': 1203, 'home_team_name': 'Braz...\n",
+       "34  {'home_team_id': 1206, 'home_team_name': 'Cana...\n",
+       "35  {'home_team_id': 861, 'home_team_name': 'Franc...\n",
+       "36  {'home_team_id': 1215, 'home_team_name': 'New ...\n",
+       "37  {'home_team_id': 861, 'home_team_name': 'Franc...\n",
+       "38  {'home_team_id': 1205, 'home_team_name': 'Aust...\n",
+       "39  {'home_team_id': 865, 'home_team_name': 'Engla...\n",
+       "40  {'home_team_id': 1213, 'home_team_name': 'Nige...\n",
+       "41  {'home_team_id': 1216, 'home_team_name': 'Sout...\n",
+       "42  {'home_team_id': 866, 'home_team_name': 'Scotl...\n",
+       "43  {'home_team_id': 1107, 'home_team_name': 'Thai...\n",
+       "44  {'home_team_id': 865, 'home_team_name': 'Engla...\n",
+       "45  {'home_team_id': 855, 'home_team_name': 'Italy...\n",
+       "46  {'home_team_id': 851, 'home_team_name': 'Nethe...\n",
+       "47  {'home_team_id': 852, 'home_team_name': 'Norwa...\n",
+       "48  {'home_team_id': 865, 'home_team_name': 'Engla...\n",
+       "49  {'home_team_id': 851, 'home_team_name': 'Nethe...\n",
+       "50  {'home_team_id': 855, 'home_team_name': 'Italy...\n",
+       "51  {'home_team_id': 863, 'home_team_name': 'Spain..."
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "dt.loc[:,[ 'home_team', 'away_team']]"
+    "dt.loc[:,[ 'home_team']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "229770b6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dtfilm = pd.read_csv('tmdb_5000_movies.csv') "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "b42cd09f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "budget                                                          300000000\n",
+       "genres                  [{\"id\": 12, \"name\": \"Adventure\"}, {\"id\": 14, \"...\n",
+       "homepage                     http://disney.go.com/disneypictures/pirates/\n",
+       "id                                                                    285\n",
+       "keywords                [{\"id\": 270, \"name\": \"ocean\"}, {\"id\": 726, \"na...\n",
+       "original_language                                                      en\n",
+       "original_title                   Pirates of the Caribbean: At World's End\n",
+       "overview                Captain Barbossa, long believed to be dead, ha...\n",
+       "popularity                                                     139.082615\n",
+       "production_companies    [{\"name\": \"Walt Disney Pictures\", \"id\": 2}, {\"...\n",
+       "production_countries    [{\"iso_3166_1\": \"US\", \"name\": \"United States o...\n",
+       "release_date                                                   2007-05-19\n",
+       "revenue                                                         961000000\n",
+       "runtime                                                             169.0\n",
+       "spoken_languages                 [{\"iso_639_1\": \"en\", \"name\": \"English\"}]\n",
+       "status                                                           Released\n",
+       "tagline                    At the end of the world, the adventure begins.\n",
+       "title                            Pirates of the Caribbean: At World's End\n",
+       "vote_average                                                          6.9\n",
+       "vote_count                                                           4500\n",
+       "Name: 1, dtype: object"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dtfilm.iloc[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "b5e8117d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "item = eval((dtfilm.at[1,'genres']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "7e49bdbc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'id': 12, 'name': 'Adventure'},\n",
+       " {'id': 14, 'name': 'Fantasy'},\n",
+       " {'id': 28, 'name': 'Action'}]"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "item"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "675bcc29",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Adventure'"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "item[0]['name']"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "229770b6",
+   "id": "f9dd25e2",
    "metadata": {},
    "outputs": [],
    "source": []
