Update feuille de route blog.ipynb

--- a/blog/feuille de route blog.ipynb
+++ b/blog/feuille de route blog.ipynb
@@ -163,7 +163,9 @@
     "\n",
     "recommendation https://www.kaggle.com/code/ibtesama/getting-started-with-a-movie-recommendation-system#Collaborative-Filtering\n",
     "\n",
-    "https://towardsdatascience.com/dealing-with-list-values-in-pandas-dataframes-a177e534f173"
+    "https://towardsdatascience.com/dealing-with-list-values-in-pandas-dataframes-a177e534f173\n",
+    "\n",
+    "https://github.com/tb0hdan/domains  dns"
    ]
   },
   {
