Update feuille de route blog.ipynb

--- a/blog/feuille de route blog.ipynb
+++ b/blog/feuille de route blog.ipynb
@@ -165,7 +165,9 @@
     "\n",
     "https://towardsdatascience.com/dealing-with-list-values-in-pandas-dataframes-a177e534f173\n",
     "\n",
-    "https://github.com/tb0hdan/domains  dns"
+    "https://github.com/tb0hdan/domains  dns\n",
+    "\n",
+    "https://www.nango.dev/     oauth"
    ]
   },
   {
