Update feuille de route blog.ipynb

--- a/blog/feuille de route blog.ipynb
+++ b/blog/feuille de route blog.ipynb
@@ -167,7 +167,9 @@
     "\n",
     "https://github.com/tb0hdan/domains  dns\n",
     "\n",
-    "https://www.nango.dev/     oauth"
+    "https://www.nango.dev/     oauth\n",
+    "\n",
+    "https://philbooth.me/blog/nine-ways-to-shoot-yourself-in-the-foot-with-postgresql  postgresql"
    ]
   },
   {
