--- a/python_datasc/delete_row.ipynb
+++ b/python_datasc/delete_row.ipynb
@@ -1437,28 +1437,155 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
-   "id": "42a16f00",
+   "execution_count": 211,
+   "id": "8fee7fc5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ma_dict = (['banane',10, 20], ['ananas', 23, 16], ['pomme' ,35, 50])"
+    "ma_dict = ([1,'banane',10, 20], [2,'ananas', 23, 16], [3,'pomme' ,35, 50])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
-   "id": "0ae30fb4",
+   "execution_count": 212,
+   "id": "8f4aaeb1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dtp = pd.DataFrame(ma_dict, columns= ['fruit', 'prix1', 'prix2'])"
+    "dtp = pd.DataFrame(ma_dict, columns= ['monindex', 'fruit', 'prix1', 'prix2'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
-   "id": "4167e546",
+   "execution_count": 213,
+   "id": "10070e16",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>monindex</th>\n",
+       "      <th>fruit</th>\n",
+       "      <th>prix1</th>\n",
+       "      <th>prix2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>banane</td>\n",
+       "      <td>10</td>\n",
+       "      <td>20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>ananas</td>\n",
+       "      <td>23</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>pomme</td>\n",
+       "      <td>35</td>\n",
+       "      <td>50</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   monindex   fruit  prix1  prix2\n",
+       "0         1  banane     10     20\n",
+       "1         2  ananas     23     16\n",
+       "2         3   pomme     35     50"
+      ]
+     },
+     "execution_count": 213,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dtp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 219,
+   "id": "7023138e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "23"
+      ]
+     },
+     "execution_count": 219,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dtp.iloc[1].prix1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 220,
+   "id": "61fe4c39",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 220,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dtp.loc[1, 'prix1']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 217,
+   "id": "aa5ab2e8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dtp = dtp.set_index('monindex')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 218,
+   "id": "749cc515",
    "metadata": {},
    "outputs": [
     {
@@ -1486,22 +1613,28 @@
        "      <th>prix1</th>\n",
        "      <th>prix2</th>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>monindex</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <th>1</th>\n",
        "      <td>banane</td>\n",
        "      <td>10</td>\n",
        "      <td>20</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>2</th>\n",
        "      <td>ananas</td>\n",
        "      <td>23</td>\n",
        "      <td>16</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>3</th>\n",
        "      <td>pomme</td>\n",
        "      <td>35</td>\n",
        "      <td>50</td>\n",
@@ -1511,13 +1644,14 @@
        "</div>"
       ],
       "text/plain": [
-       "    fruit  prix1  prix2\n",
-       "0  banane     10     20\n",
-       "1  ananas     23     16\n",
-       "2   pomme     35     50"
+       "           fruit  prix1  prix2\n",
+       "monindex                      \n",
+       "1         banane     10     20\n",
+       "2         ananas     23     16\n",
+       "3          pomme     35     50"
       ]
      },
-     "execution_count": 186,
+     "execution_count": 218,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1528,71 +1662,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
-   "id": "17b9024f",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "23"
-      ]
-     },
-     "execution_count": 190,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dtp.iloc[1].prix1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 189,
-   "id": "d1da93db",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "23"
-      ]
-     },
-     "execution_count": 189,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dtp.loc[1, 'prix1']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 194,
-   "id": "4a64575f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dtp = dtp.set_index('prix1')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 196,
-   "id": "865014b8",
+   "execution_count": 208,
+   "id": "37c7ea65",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "fruit    ananas\n",
-       "prix2        16\n",
-       "Name: 23, dtype: object"
+       "Name: 16, dtype: object"
       ]
      },
-     "execution_count": 196,
+     "execution_count": 208,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1603,8 +1684,111 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 210,
+   "id": "df7929ba",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "fruit    banane\n",
+       "Name: 20, dtype: object"
+      ]
+     },
+     "execution_count": 210,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dtp.loc[20]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 197,
+   "id": "b9a45808",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dtp= dtp.reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 198,
+   "id": "3c01c1f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>prix1</th>\n",
+       "      <th>fruit</th>\n",
+       "      <th>prix2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10</td>\n",
+       "      <td>banane</td>\n",
+       "      <td>20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>23</td>\n",
+       "      <td>ananas</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>35</td>\n",
+       "      <td>pomme</td>\n",
+       "      <td>50</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   prix1   fruit  prix2\n",
+       "0     10  banane     20\n",
+       "1     23  ananas     16\n",
+       "2     35   pomme     50"
+      ]
+     },
+     "execution_count": 198,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dtp"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "d613623e",
+   "id": "9096cd96",
    "metadata": {},
    "outputs": [],
    "source": []
