--- a/python_datasc/delete_row.ipynb
+++ b/python_datasc/delete_row.ipynb
@@ -1437,7 +1437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 3,
    "id": "8fee7fc5",
    "metadata": {},
    "outputs": [],
@@ -1447,7 +1447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 4,
    "id": "8f4aaeb1",
    "metadata": {},
    "outputs": [],
@@ -1457,7 +1457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 5,
    "id": "10070e16",
    "metadata": {},
    "outputs": [
@@ -1521,7 +1521,7 @@
        "2         3   pomme     35     50"
       ]
      },
-     "execution_count": 213,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1532,7 +1532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 6,
    "id": "7023138e",
    "metadata": {},
    "outputs": [
@@ -1542,7 +1542,7 @@
        "23"
       ]
      },
-     "execution_count": 219,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1553,17 +1553,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 7,
    "id": "61fe4c39",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "10"
+       "23"
       ]
      },
-     "execution_count": 220,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1574,7 +1574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 8,
    "id": "aa5ab2e8",
    "metadata": {},
    "outputs": [],
@@ -1584,7 +1584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 9,
    "id": "749cc515",
    "metadata": {},
    "outputs": [
@@ -1651,7 +1651,7 @@
        "3          pomme     35     50"
       ]
      },
-     "execution_count": 218,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1662,7 +1662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 10,
    "id": "37c7ea65",
    "metadata": {},
    "outputs": [
@@ -1670,10 +1670,12 @@
      "data": {
       "text/plain": [
        "fruit    ananas\n",
-       "Name: 16, dtype: object"
+       "prix1        23\n",
+       "prix2        16\n",
+       "Name: 2, dtype: object"
       ]
      },
-     "execution_count": 208,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1684,7 +1686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 12,
    "id": "df7929ba",
    "metadata": {},
    "outputs": [
@@ -1692,21 +1694,23 @@
      "data": {
       "text/plain": [
        "fruit    banane\n",
-       "Name: 20, dtype: object"
+       "prix1        10\n",
+       "prix2        20\n",
+       "Name: 1, dtype: object"
       ]
      },
-     "execution_count": 210,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dtp.loc[20]"
+    "dtp.loc[1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": null,
    "id": "b9a45808",
    "metadata": {},
    "outputs": [],
