Update feuille de route blog.ipynb

--- a/blog/feuille de route blog.ipynb
+++ b/blog/feuille de route blog.ipynb
@@ -170,7 +170,9 @@
     "https://www.nango.dev/     oauth\n",
     "\n",
     "https://philbooth.me/blog/nine-ways-to-shoot-yourself-in-the-foot-with-postgresql  postgresql\n",
-    "https://github.com/csgoh/roadmapper  road map\n"
+    "https://github.com/csgoh/roadmapper  road map\n",
+    "\n",
+    "https://elementary.io/fr/   nouvel os\n"
    ]
   },
   {
