--- a/blog/feuille de route blog.ipynb
+++ b/blog/feuille de route blog.ipynb
@@ -172,7 +172,8 @@
     "https://philbooth.me/blog/nine-ways-to-shoot-yourself-in-the-foot-with-postgresql  postgresql\n",
     "https://github.com/csgoh/roadmapper  road map\n",
     "\n",
-    "https://elementary.io/fr/   nouvel os\n"
+    "https://elementary.io/fr/   nouvel os\n",
+    "https://html.com/resources/free-html-templates/  \n"
    ]
   },
   {
