--- a/blog/feuille de route blog.ipynb
+++ b/blog/feuille de route blog.ipynb
@@ -177,9 +177,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "96b079f3",
+   "metadata": {},
+   "source": [
+    "## nouvelle rubrique\n",
+    "https://github.com/susam/mintotp\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d32aed71",
+   "id": "8bc6fd04",
    "metadata": {},
    "outputs": [],
    "source": []
