Update feuille de route blog.ipynb

--- a/blog/feuille de route blog.ipynb
+++ b/blog/feuille de route blog.ipynb
@@ -178,18 +178,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96b079f3",
+   "id": "87d8eb0c",
    "metadata": {},
    "source": [
     "## nouvelle rubrique\n",
     "https://github.com/susam/mintotp\n",
-    "\n"
+    "\n",
+    "l https://github.com/csgoh/roadmapper road map\n",
+    "https://www.tnmoc.org/3d-virtual-tour2?fbclid=IwAR0iHX7_H_4ThPNRcv_j1JtSOJogG_DBmUh6rj6UitxQSWhGBPz7lkUiBq0  musee comuter"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8bc6fd04",
+   "id": "6c0b32e0",
    "metadata": {},
    "outputs": [],
    "source": []
