Update feuille de route blog.ipynb

--- a/blog/feuille de route blog.ipynb
+++ b/blog/feuille de route blog.ipynb
@@ -185,7 +185,8 @@
     "https://github.com/susam/mintotp\n",
     "\n",
     "l https://github.com/csgoh/roadmapper road map\n",
-    "https://www.tnmoc.org/3d-virtual-tour2?fbclid=IwAR0iHX7_H_4ThPNRcv_j1JtSOJogG_DBmUh6rj6UitxQSWhGBPz7lkUiBq0  musee comuter"
+    "https://www.tnmoc.org/3d-virtual-tour2?fbclid=IwAR0iHX7_H_4ThPNRcv_j1JtSOJogG_DBmUh6rj6UitxQSWhGBPz7lkUiBq0  musee computer\n",
+    "https://pynecone.io/  front end python\n"
    ]
   },
   {
