change code http

--- a/blog/feuille de route blog.ipynb
+++ b/blog/feuille de route blog.ipynb
@@ -186,7 +186,8 @@
     "\n",
     "l https://github.com/csgoh/roadmapper road map\n",
     "https://www.tnmoc.org/3d-virtual-tour2?fbclid=IwAR0iHX7_H_4ThPNRcv_j1JtSOJogG_DBmUh6rj6UitxQSWhGBPz7lkUiBq0  musee computer\n",
-    "https://pynecone.io/  front end python\n"
+    "https://pynecone.io/  front end python\n",
+    "https://gist.github.com/Julynx/dd500d8ae7e335c3c84684ede2293e1f   15 astuces python\n"
    ]
   },
   {
