Update feuille de route blog.ipynb

--- a/blog/feuille de route blog.ipynb
+++ b/blog/feuille de route blog.ipynb
@@ -190,7 +190,9 @@
     "https://gist.github.com/Julynx/dd500d8ae7e335c3c84684ede2293e1f   15 astuces python\n",
     "https://ray-project.github.io/2017/10/15/fast-python-serialization-with-ray-and-arrow.html  alternative à ray\n",
     "https://medium.com/@chingchen0131/a-beginners-guide-to-kubernetes-e0f1c2866d36 \n",
-    "https://geekflare.com/python-web-servers/ \n"
+    "https://geekflare.com/python-web-servers/ \n",
+    "https://intverse.medium.com/kong-api-gateway-k8s-architecture-5597570da34a  kong\n",
+    "\n"
    ]
   },
   {
