--- a/blog/feuille de route blog.ipynb
+++ b/blog/feuille de route blog.ipynb
@@ -195,6 +195,7 @@
     "\n",
     "https://twitter.com/hasantoxr/status/1657696417337491459\n",
     "https://github.com/denyhosts/denyhosts\n",
+    "https://i.redd.it/o1eyuyjlv61b1.jpg big picture\n",
     "https://xavki.blog/k0s-tutoriels-et-formation-gratuite/k0s"
    ]
   },
