--- a/blog/feuille de route blog.ipynb
+++ b/blog/feuille de route blog.ipynb
@@ -196,7 +196,9 @@
     "https://twitter.com/hasantoxr/status/1657696417337491459\n",
     "https://github.com/denyhosts/denyhosts\n",
     "https://i.redd.it/o1eyuyjlv61b1.jpg big picture\n",
-    "https://xavki.blog/k0s-tutoriels-et-formation-gratuite/k0s"
+    "https://xavki.blog/k0s-tutoriels-et-formation-gratuite/k0s\n",
+    "\n",
+    "https://securite.developpez.com/actu/266558/Zanzibar-le-systeme-d-autorisation-global-et-coherent-de-Google-qui-ameliore-l-exactitude-et-la-fiabilite-des-controles-d-acces/  zanzibar de google\n"
    ]
   },
   {
