--- a/blog/feuille de route blog.ipynb
+++ b/blog/feuille de route blog.ipynb
@@ -198,7 +198,8 @@
     "https://i.redd.it/o1eyuyjlv61b1.jpg big picture\n",
     "https://xavki.blog/k0s-tutoriels-et-formation-gratuite/k0s\n",
     "\n",
-    "https://securite.developpez.com/actu/266558/Zanzibar-le-systeme-d-autorisation-global-et-coherent-de-Google-qui-ameliore-l-exactitude-et-la-fiabilite-des-controles-d-acces/  zanzibar de google\n"
+    "https://securite.developpez.com/actu/266558/Zanzibar-le-systeme-d-autorisation-global-et-coherent-de-Google-qui-ameliore-l-exactitude-et-la-fiabilite-des-controles-d-acces/  zanzibar de google\n",
+    "https://notes.ekzhang.com/papers/passwords\n"
    ]
   },
   {
