--- a/blog/feuille de route blog.ipynb
+++ b/blog/feuille de route blog.ipynb
@@ -199,7 +199,10 @@
     "https://xavki.blog/k0s-tutoriels-et-formation-gratuite/k0s\n",
     "\n",
     "https://securite.developpez.com/actu/266558/Zanzibar-le-systeme-d-autorisation-global-et-coherent-de-Google-qui-ameliore-l-exactitude-et-la-fiabilite-des-controles-d-acces/  zanzibar de google\n",
-    "https://notes.ekzhang.com/papers/passwords\n"
+    "\n",
+    "https://notes.ekzhang.com/papers/passwords\n",
+    "\n",
+    "https://github.com/gitpod-io/openvscode-server   vscode server"
    ]
   },
   {
